--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ a:visited {
 
   /* Match height and activity boxes */
   height: 9.25rem;
+}
+
+.form--transition {
   transition: all 0.5s, transform 1ms;
 }
 
